--- a/src/main/resources/templates/account/list.html
+++ b/src/main/resources/templates/account/list.html
@@ -1,33 +1,103 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<tittle>Accounts</tittle>
-		<!-- 想用样式的话必须把相关的文件拷贝过来然后写下面两行 -->
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> <!-- 自动补上项目名 -->
+		<script th:src="@{/js/common/jquery-3.4.1.min.js}"></script><!-- 先引入JQuery再引入bootstrap -->
 		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<title>办公自动化系统</title>
 	</head>
 	<body>
-		Account List
-		<hr>
-		<table class="table table-striped">
+	
+		<!-- 导航栏 开始 ⬇️-->
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="/index">首页</a>
+		    </div>
+		
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+		      <!-- 每个li是一组按钮 -->
+		        <li><a href="#">公文流转</a></li>
+		        <li class="dropdown active">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">人员管理 <span class="caret"></span></a>
+		          <ul class="dropdown-menu">
+		            <li class="active"><a href="/account/list">用户列表</a></li>
+		            <li><a href="#">Another action</a></li>
+		            <li><a href="#">Something else here</a></li>
+		            <li role="separator" class="divider"></li>
+		            <li><a href="#">Separated link</a></li>
+		            <li role="separator" class="divider"></li>
+		            <li><a href="#">One more separated link</a></li>
+		          </ul>
+		        </li>
+		      </ul>
+		      <form class="navbar-form navbar-left">
+		        <div class="form-group">
+		          <input type="text" class="form-control" placeholder="请输入员工姓名或者工号">
+		        </div>
+		        <button type="submit" class="btn btn-default">搜索</button>
+		      </form>
+		      
+		      <ul th:if="${session.account} == null" class="nav navbar-nav navbar-right">
+		      	<!-- 未登录用户 -->
+		        <li><a href="/account/register">注册</a></li>
+		        <li><a href="/account/login">登录</a></li>
+		      </ul>
+		      
+		      <ul th:if="${session.account} != null" class="nav navbar-nav navbar-right">
+		        <!-- 已登录用户 ⬇️-->
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+		          	欢迎你，[[${session.account.username}]] <span class="caret"></span><span class="badge">666</span><!-- 这个略酷 --></a>
+		          <ul class="dropdown-menu">
+		            <li><a href="/account/profile">个人信息</a></li>
+		            <li><a href="#">Another action</a></li>
+		            <li><a href="#">Something else here</a></li>
+		            <li role="separator" class="divider"></li>
+		            <li><a href="/account/logout">退出登录</a></li>
+		          </ul>
+		        </li>
+		        <!-- 已登录用户 ⬆️-->
+		      </ul>
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
+		<!-- 导航栏 结束 ⬆️-->
+	
+		<!-- 用户列表 开始 ⬇️-->
+		<table class="table table-hover">
 		
 			<tr>
+				<th>序号</th>
 				<th>ID</th>
 				<th>Userame</th>
 				<th>Password</th>
 				<th>Age</th>
 				<th>NickName</th>
 				<th>Location</th>
+				<th>操作</th>
 			</tr>
 			<tbody>
-			<tr th:each="account : ${accounts}">
-				<td th:text="${account.id}"></td> <!-- Account 会以反射的方法调用getters，所以必须得写get方法 -->
-				<td th:text="${account.username}"></td>
-				<td th:text="${account.password}"></td>
-				<td th:text="${account.age}"></td>
-				<td th:text="${account.nickName}"></td>
-				<td th:text="${account.location}"></td>
-			</tr> <!-- "${}" 表示的是从scope动态取值 -->
+				<tr th:each="account,status : ${accounts}"> <!-- 这里要定义一下status下面才可以用 status.count-->
+					<td>[[${status.count}]]</td>
+					<!-- 或者：td标签里面写：th:text="${status.count}" -->
+					<td th:text="${account.id}"></td> <!-- Account 会以反射的方法调用getters，所以必须得写get方法 -->
+					<td th:text="${account.username}"></td>
+					<td th:text="${account.password}"></td>
+					<td th:text="${account.age}"></td>
+					<td th:text="${account.nickName}"></td>
+					<td th:text="${account.location}"></td>
+					<td></td>
+				</tr> <!-- "${}" 表示的是从scope动态取值 -->
 			</tbody>
 		</table>
+		<!-- 用户列表 结束 ⬆️-->
 	</body>
 </html>
