--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> <!-- 自动补上项目名 -->
 		<script th:src="@{/js/common/jquery-3.4.1.min.js}"></script><!-- 先引入JQuery再引入bootstrap -->
@@ -17,18 +17,19 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#">首页</a>
+		      <a class="navbar-brand" href="/index">首页</a>
 		    </div>
 		
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+		      <!-- 每个li是一组按钮 -->
+		        <li><a href="#">公文流转</a></li>
 		        <li><a href="#">Link</a></li>
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">人员管理 <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li><a href="#">Action</a></li>
+		            <li><a href="/account/list">用户列表</a></li>
 		            <li><a href="#">Another action</a></li>
 		            <li><a href="#">Something else here</a></li>
 		            <li role="separator" class="divider"></li>
@@ -40,22 +41,31 @@
 		      </ul>
 		      <form class="navbar-form navbar-left">
 		        <div class="form-group">
-		          <input type="text" class="form-control" placeholder="Search">
+		          <input type="text" class="form-control" placeholder="请输入员工姓名或者工号">
 		        </div>
-		        <button type="submit" class="btn btn-default">Submit</button>
+		        <button type="submit" class="btn btn-default">搜索</button>
 		      </form>
-		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">Link</a></li>
+		      
+		      <ul th:if="${session.account} == null" class="nav navbar-nav navbar-right">
+		      	<!-- 未登录用户 -->
+		        <li><a href="/account/register">注册</a></li>
+		        <li><a href="/account/login">登录</a></li>
+		      </ul>
+		      
+		      <ul th:if="${session.account} != null" class="nav navbar-nav navbar-right">
+		        <!-- 已登录用户 ⬇️-->
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+		          	欢迎你，[[${session.account.username}]] <span class="caret"></span><span class="badge">666</span><!-- 这个略酷 --></a>
 		          <ul class="dropdown-menu">
-		            <li><a href="#">Action</a></li>
+		            <li><a href="/account/profile">个人信息</a></li>
 		            <li><a href="#">Another action</a></li>
 		            <li><a href="#">Something else here</a></li>
 		            <li role="separator" class="divider"></li>
-		            <li><a href="#">Separated link</a></li>
+		            <li><a href="/account/logout">退出登录</a></li>
 		          </ul>
 		        </li>
+		        <!-- 已登录用户 ⬆️-->
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -64,9 +74,8 @@
 	
 		<!-- 巨幕 开始 ⬇️-->
 		<div class="jumbotron">
-  			<h1>Hello, world!</h1>
-  			<p>...</p>
-  			<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  			<h1>欢迎使用无纸化办公系统</h1>
+  			<p>.vresion 1.0</p>
 		</div>
 		<!-- 巨幕 结束 ⬆️-->
 	</body>
