--- a/src/main/resources/templates/account/list.html
+++ b/src/main/resources/templates/account/list.html
@@ -82,10 +82,11 @@
 				<th>Age</th>
 				<th>NickName</th>
 				<th>Location</th>
+				<th>Role</th>
 				<th>操作</th>
 			</tr>
 			<tbody>
-				<tr th:each="account : ${accounts}"> 
+				<tr th:each="account : ${page.list}"> 
 					<td>[[${accountStat.count}]]</td>
 					<!-- 或者：td标签里面写：th:text="${status.count}" -->
 					<td th:text="${account.id}"></td> <!-- Account 会以反射的方法调用getters，所以必须得写get方法 -->
@@ -94,10 +95,28 @@
 					<td th:text="${account.age}"></td>
 					<td th:text="${account.nickName}"></td>
 					<td th:text="${account.location}"></td>
+					<td th:text="${account.role}"></td>
 					<td></td>
 				</tr> <!-- "${}" 表示的是从scope动态取值 -->
 			</tbody>
 		</table>
 		<!-- 用户列表 结束 ⬆️-->
+		<nav aria-label="Page navigation">
+		  <ul class="pagination">
+		    <li th:class="${!page.hasPreviousPage} ? 'disabled' : ''"><!--  自己试出来的 sweet,!写在里面跟外面是一样的 -->
+		      <a th:href="${!page.hasPreviousPage} ? 'javascript:void(0)' : @{'/account/list?pageNum=' + ${page.prePage}}" aria-label="Previous"> <!-- 用'javascript:void(0)'代替'#',是为了避免点击之后从最下面跳到最上面，虽然不翻页 -->
+		        <span aria-hidden="true">&laquo;</span>
+		      </a>
+		    </li>
+		    <li th:each="pageNum : ${page.navigatepageNums}">
+		    	<a th:href="@{'/account/list?pageNum=' + ${pageNum}}">[[${pageNum}]]</a>  <!-- 直接加${pageNum}不行，静态的部分和动态的部分要用 + 连接才可以 -->
+		    </li>
+		    <li th:class="${!page.hasNextPage} ? disabled : ''">
+		      <a th:href="${!page.hasNextPage} ? 'javascript:void(0)' : @{'/account/list?pageNum=' + ${page.nextPage}}" aria-label="Next">
+		        <span aria-hidden="true">&raquo;</span>
+		      </a>
+		    </li>
+		  </ul>
+		</nav>
 	</body>
 </html>
