Disable the 'Delete' and 'CHange Password' buttons if the role is not admin

--- a/src/main/resources/templates/account/list.html
+++ b/src/main/resources/templates/account/list.html
@@ -96,9 +96,13 @@
 					<td th:text="${account.nickName}"></td>
 					<td th:text="${account.location}"></td>
 					<td th:text="${account.role}"></td>
-					<td>
+					<td th:if="${account.role} == 'admin'">
 						<a class="btn btn-danger" th:href="@{'javascript:deleteById(' + ${account.id} + ');'}">删除</a> 
 						<a class="btn btn-info" th:href="@{'javascript:changePassword(' + ${account.id} + ',\'' + ${account.username} + '\');'}">修改密码</a> 
+					</td>
+					<td th:if="${account.role} != 'admin'">
+						<a class="btn btn-danger" disabled>删除</a> 
+						<a class="btn btn-info" disabled>修改密码</a> 
 					</td>
 				</tr> <!-- "${}" 表示的是从scope动态取值 -->
 			</tbody>
