--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -42,7 +42,7 @@
 	                            if (data.errmsg != '') {
 	                                alert(data.errmsg);
 	                            } else {
-	                                alert("系统错误");
+	                                alert("Error: 系统错误");
 	                            }
 	                        }
 	                        console.log(data);
