--- a/src/main/resources/templates/manager/accountList.html
+++ b/src/main/resources/templates/manager/accountList.html
@@ -25,10 +25,10 @@
 		      <ul class="nav navbar-nav">
 		      <!-- 每个li是一组按钮 -->
 		        <li><a href="#">公文流转</a></li>
-		        <li class="dropdown active">
+		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">人力资源 <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li class="active"><a href="/account/list">员工列表</a></li>
+		            <li><a href="/account/list">员工列表</a></li>
 		            <li><a href="#">Another action</a></li>
 		            <li><a href="#">Something else here</a></li>
 		            <li role="separator" class="divider"></li>
@@ -37,7 +37,7 @@
 		            <li><a href="#">One more separated link</a></li>
 		          </ul>
 		        </li>
-		        <li class="dropdown active">
+		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">系统设置 <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
 		            <li><a href="/account/list">账号列表</a></li>
@@ -78,7 +78,7 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 		<!-- 导航栏 结束 ⬆️-->
-	
+		<h1>帐号管理</h1>
 		<!-- 用户列表 开始 ⬇️-->
 		<table class="table table-hover">
 		
