--- a/src/main/resources/templates/manager/roleList.html
+++ b/src/main/resources/templates/manager/roleList.html
@@ -25,10 +25,10 @@
 		      <ul class="nav navbar-nav">
 		      <!-- 每个li是一组按钮 -->
 		        <li><a href="#">公文流转</a></li>
-		        <li class="dropdown active">
+		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">人力资源 <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li class="active"><a href="/account/list">员工列表</a></li>
+		            <li><a href="/account/list">员工列表</a></li>
 		            <li><a href="#">Another action</a></li>
 		            <li><a href="#">Something else here</a></li>
 		            <li role="separator" class="divider"></li>
@@ -37,7 +37,7 @@
 		            <li><a href="#">One more separated link</a></li>
 		          </ul>
 		        </li>
-		        <li class="dropdown active">
+		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">系统设置 <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
 		            <li><a href="/account/list">账号列表</a></li>
@@ -78,32 +78,32 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 		<!-- 导航栏 结束 ⬆️-->
-	
+		<h1>角色管理</h1>
 		<!-- 用户列表 开始 ⬇️-->
 		<table class="table table-hover">
 		
 			<tr>
 				<th>序号</th>
 				<th>ID</th>
-				<th>Userame</th>
-				<th>Password</th>
+				<th>名称</th>
+				<!-- <th>Password</th>
 				<th>Age</th>
 				<th>NickName</th>
 				<th>Location</th>
-				<th>Role</th>
+				<th>Role</th> -->
 				<th>操作</th>
 			</tr>
 			<tbody>
-				<tr th:each="account : ${page.list}"> 
-					<td>[[${accountStat.count}]]</td>
+				<tr th:each="role : ${page.list}"> 
+					<td>[[${roleStat.count}]]</td>
 					<!-- 或者：td标签里面写：th:text="${status.count}" -->
-					<td th:text="${account.id}"></td> <!-- Account 会以反射的方法调用getters，所以必须得写get方法 -->
-					<td th:text="${account.username}"></td>
-					<td th:text="${account.password}"></td>
+					<td th:text="${role.id}"></td> <!-- Account 会以反射的方法调用getters，所以必须得写get方法 -->
+					<td th:text="${role.name}"></td>
+					<!-- <td th:text="${account.password}"></td>
 					<td th:text="${account.age}"></td>
 					<td th:text="${account.nickName}"></td>
 					<td th:text="${account.location}"></td>
-					<td th:text="${account.role}"></td>
+					<td th:text="${account.role}"></td> -->
 					<td th:if="${session.account.role} == 'admin'">
 						<a class="btn btn-danger" th:href="@{'javascript:deleteById(' + ${account.id} + ');'}">删除</a> 
 						<a class="btn btn-info" th:href="@{'javascript:changePassword(' + ${account.id} + ',\'' + ${account.username} + '\');'}">修改密码</a> 
