--- a/src/main/resources/templates/manager/permissionModify.html
+++ b/src/main/resources/templates/manager/permissionModify.html
@@ -113,6 +113,7 @@
 				});
 				*/
 				console.log(formObject);
+				// 发送JSON data 到RestController：https://blog.csdn.net/Ditto_zhou/article/details/73198886
 				$.ajax({
 					type:'POST',
 					url:url,
