--- a/src/main/resources/templates/manager/permissionList.html
+++ b/src/main/resources/templates/manager/permissionList.html
@@ -193,7 +193,7 @@
 					contentType:'application/json;charset=utf-8',//其中;charset=utf-8可以不写
 					dataType:'json'
 				});
-				window.local.reload;
+				window.local.reload();
 			}
 			
 			function changePassword(id, username) {
