--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -14,7 +14,7 @@
 			<div style="width:1000px;margin:0 auto;">
  				<div style="width: 100%;height: 87px;">
  					<div style="width: 87px;height: 87px;float: left;"><img th:src="@{/images/zshLogo.png}"/></div>
- 					<span style="display: block;float: left;height: 87px;line-height: 87px;font-size: 26px;margin-left: 10px;">中国石化数据应用分析平台</span>
+ 					<span style="display: block;float: left;height: 87px;line-height: 87px;font-size: 26px;margin-left: 10px;">[[${name}]]数据应用分析平台</span>
  				</div>
  			</div>
  		</div>
