--- a/src/main/resources/templates/manager/permissionModify.html
+++ b/src/main/resources/templates/manager/permissionModify.html
@@ -115,6 +115,7 @@
 				*/
 				console.log(formObject);
 				// 发送JSON data 到RestController：https://blog.csdn.net/Ditto_zhou/article/details/73198886
+				// https://blog.csdn.net/ailo555/article/details/48859425
 				$.ajax({
 					type:'POST',
 					url:url,
@@ -128,7 +129,7 @@
 					contentType:'application/json;charset=utf-8',//其中;charset=utf-8可以不写
 					dataType:'json'
 				});
-				window.local.reload;
+				window.local.reload();
 			}
 		</script>
 	</body>
