--- a/src/main/resources/templates/manager/rolePermissions.html
+++ b/src/main/resources/templates/manager/rolePermissions.html
@@ -40,9 +40,9 @@
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">系统设置 <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li><a href="/account/list">账号列表</a></li>
-		            <li><a href="/account/role">角色管理</a></li>
-		            <li><a href="/account/permission">权限管理</a></li>
+		            <li><a href="/manager/accountList">账号列表</a></li>
+		            <li><a href="/manager/roleList">角色管理</a></li>
+		            <li><a href="/manager/permissionList">权限管理</a></li>
 		          </ul>
 		        </li>
 		      </ul>
@@ -78,82 +78,132 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 		<!-- 导航栏 结束 ⬆️-->
-		<h1>角色管理</h1>
+		<h1>权限管理</h1>
 		<!-- 用户列表 开始 ⬇️-->
 		<table class="table table-hover">
 		
 			<tr>
 				<th>序号</th>
 				<th>ID</th>
+				<th>URI</th>
 				<th>名称</th>
-				<!-- <th>Password</th>
-				<th>Age</th>
-				<th>NickName</th>
-				<th>Location</th>
-				<th>Role</th> -->
+				<th>创建</th>
+				<th>读取</th>
+				<th>修改</th>
+				<th>删除</th>
 				<th>操作</th>
 			</tr>
 			<tbody>
-				<tr th:each="role : ${page.list}"> 
-					<td>[[${roleStat.count}]]</td>
+				<!-- 用item和page是减少个性化的代码和变量，这样复制粘贴的时候改得少 -->
+				<tr th:each="item : ${page.list}"> 
+					<td>[[${itemStat.count}]]</td>
 					<!-- 或者：td标签里面写：th:text="${status.count}" -->
-					<td th:text="${role.id}"></td> <!-- Account 会以反射的方法调用getters，所以必须得写get方法 -->
-					<td th:text="${role.name}"></td>
-					<!-- <td th:text="${account.password}"></td>
-					<td th:text="${account.age}"></td>
-					<td th:text="${account.nickName}"></td>
-					<td th:text="${account.location}"></td>
-					<td th:text="${account.role}"></td> -->
+					<td th:text="${item.id}"></td> <!-- Account 会以反射的方法调用getters，所以必须得写get方法 -->
+					<td th:text="${item.uri}"></td>
+					<td th:text="${item.name}"></td>
+					<td th:text="${item.c}"></td>
+					<td th:text="${item.r}"></td>
+					<td th:text="${item.u}"></td>
+					<td th:text="${item.d}"></td>
 					<td th:if="${session.account.role} == 'admin'">
-						<a class="btn btn-danger" th:href="@{'javascript:deleteById(' + ${role.id} + ');'}">删除</a> 
-						<a class="btn btn-info" th:href="@{'/manager/rolePermissions/' + ${role.id}}">修改</a> 
+						<a class="btn btn-danger" th:href="@{'javascript:deleteById(' + ${item.id} + ');'}">删除</a> 
+						<a class="btn btn-info" th:href="@{'javascript:modify(' + ${item.id} + ');'}">修改</a> 
+					</td>
+					<td th:if="${session.account.role} != 'admin'">
+						<a class="btn btn-danger" disabled>删除</a> 
+						<a class="btn btn-info" disabled>修改密码</a> 
 					</td>
 				</tr> <!-- "${}" 表示的是从scope动态取值 -->
 			</tbody>
 		</table>
+		<br />
+		<a class="btn btn-default" href="/manager/permissionAdd">添加权限</a><br /> 
 		<!-- 用户列表 结束 ⬆️-->
 		<nav aria-label="Page navigation">
 		  <ul class="pagination">
 		    <li th:class="${!page.hasPreviousPage} ? 'disabled' : ''"><!--  自己试出来的 sweet,!写在里面跟外面是一样的 -->
-		      <a th:href="${!page.hasPreviousPage} ? 'javascript:void(0)' : @{'/manager/roleList?pageNum=' + ${page.prePage}}" aria-label="Previous"> <!-- 用'javascript:void(0)'代替'#',是为了避免点击之后从最下面跳到最上面，虽然不翻页 -->
+		      <a th:href="${!page.hasPreviousPage} ? 'javascript:void(0)' : @{'/account/list?pageNum=' + ${page.prePage}}" aria-label="Previous"> <!-- 用'javascript:void(0)'代替'#',是为了避免点击之后从最下面跳到最上面，虽然不翻页 -->
 		        <span aria-hidden="true">&laquo;</span>
 		      </a>
 		    </li>
 		    <li th:each="pageNum : ${page.navigatepageNums}">
-		    	<a th:href="@{'/manager/roleList?pageNum=' + ${pageNum}}">[[${pageNum}]]</a>  <!-- 直接加${pageNum}不行，静态的部分和动态的部分要用 + 连接才可以 -->
+		    	<a th:href="@{'/manager/accountList?pageNum=' + ${pageNum}}">[[${pageNum}]]</a>  <!-- a标签里直接加${pageNum}不行，静态的部分和动态的部分要用 + 连接才可以 -->
 		    </li>
 		    <li th:class="${!page.hasNextPage} ? disabled : ''">
-		      <a th:href="${!page.hasNextPage} ? 'javascript:void(0)' : @{'/manager/roleList?pageNum=' + ${page.nextPage}}" aria-label="Next">
+		      <a th:href="${!page.hasNextPage} ? 'javascript:void(0)' : @{'/manager/accountList?pageNum=' + ${page.nextPage}}" aria-label="Next">
 		        <span aria-hidden="true">&raquo;</span>
 		      </a>
 		    </li>
 		  </ul>
 		</nav>
 		
+		<div class="modal fade" id="permissionModifyModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">添加或修改权限</h4>
+                </div>
+                <div class="modal-body">
+					<div class="form-group" hidden="true">
+                        <label for="txt_departmentname">ID</label>
+                        <input type="text" name="id" class="form-control" id="id" placeholder="">
+                    </div>
+                    <div class="form-group">
+                        <label for="txt_departmentname">Username</label>
+                        <input type="text" name="username" class="form-control" id="username" disabled placeholder="">
+                    </div>
+                    <div class="form-group">
+                        <label for="txt_departmentname">新密码</label>
+                        <input type="text" name="newPassword" class="form-control" id="newPassword" placeholder="新密码">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" id="btn_submit" class="btn btn-primary" data-dismiss="modal" th:onclick="@{'javascript:confirmChangePassword();'}">保存</button>
+                </div>
+            </div>
+        </div>
+    </div>
+		
 		<script type="text/javascript">
+			function modify (id) {
+				window.location.href = "/manager/permissionModify?id=" + id;
+			}
+		
+		
+		
+		
 			function deleteById(id) {
-				if (!confirm("确定要删除用户ID = " + id + "吗？")) {
+				if (!confirm("确定要删除权限ID = " + id + "吗？")) {
 					return;
 				}
 				// 去访问一个带有JSON ResponseStatus类型的结果的controller就行了，@ResponseBody
 				// 不用ajax的话会造成页面的跳转
-				var url = "/account/delete";
-				var args = {id:id};
-				$.post (url, args, function(data) {
-					console.log(data);
-					if (data.code == 200) {
-						window.location.reload();//刷新页面
-					} else {
-						alert(data.message);
-					}
+				var url = "/api/v1/manager/permission/delete?id=" + id;
+				$.ajax({
+					type:'DELETE',
+					url:url,
+					success:function(data) {
+						console.log("Success: " + JSON.stringify(data));
+					},
+					error:function(data) { //返回只不是200都会进到这里
+						console.log("Error: " + data);
+					},
+					contentType:'application/json;charset=utf-8',//其中;charset=utf-8可以不写
+					dataType:'json'
 				});
+				window.local.reload();
 			}
 			
-			function update(id) {
-				window.location.href="/manager/rolePermissions";
+			function changePassword(id, username) {
+				$('#permissionModifyModal').modal();
+				$('#id').val(id);
+				$('#username').val(username);
+				$('#newPassword').val('');
 			}
 			
-			function confirmUpdate() {
+			function confirmChangePassword() {
 				var id = $('#id').val();
 				var newPassword = $('#newPassword').val();
 				var url = "/account/updatePasswordById";
