Check the permissions of a role and add role works

--- a/src/main/resources/templates/manager/permissionModify.html
+++ b/src/main/resources/templates/manager/permissionModify.html
@@ -129,7 +129,7 @@
 					contentType:'application/json;charset=utf-8',//其中;charset=utf-8可以不写
 					dataType:'json'
 				});
-				window.local.reload();
+				window.location.href="/manager/permissionList";
 			}
 		</script>
 	</body>
