--- a/src/main/resources/templates/manager/permissionList.html
+++ b/src/main/resources/templates/manager/permissionList.html
@@ -122,15 +122,15 @@
 		<nav aria-label="Page navigation">
 		  <ul class="pagination">
 		    <li th:class="${!page.hasPreviousPage} ? 'disabled' : ''"><!--  自己试出来的 sweet,!写在里面跟外面是一样的 -->
-		      <a th:href="${!page.hasPreviousPage} ? 'javascript:void(0)' : @{'/account/list?pageNum=' + ${page.prePage}}" aria-label="Previous"> <!-- 用'javascript:void(0)'代替'#',是为了避免点击之后从最下面跳到最上面，虽然不翻页 -->
+		      <a th:href="${!page.hasPreviousPage} ? 'javascript:void(0)' : @{'/manager/permissionList?pageNum=' + ${page.prePage}}" aria-label="Previous"> <!-- 用'javascript:void(0)'代替'#',是为了避免点击之后从最下面跳到最上面，虽然不翻页 -->
 		        <span aria-hidden="true">&laquo;</span>
 		      </a>
 		    </li>
 		    <li th:each="pageNum : ${page.navigatepageNums}">
-		    	<a th:href="@{'/manager/accountList?pageNum=' + ${pageNum}}">[[${pageNum}]]</a>  <!-- a标签里直接加${pageNum}不行，静态的部分和动态的部分要用 + 连接才可以 -->
+		    	<a th:href="@{'/manager/permissionList?pageNum=' + ${pageNum}}">[[${pageNum}]]</a>  <!-- a标签里直接加${pageNum}不行，静态的部分和动态的部分要用 + 连接才可以 -->
 		    </li>
 		    <li th:class="${!page.hasNextPage} ? disabled : ''">
-		      <a th:href="${!page.hasNextPage} ? 'javascript:void(0)' : @{'/manager/accountList?pageNum=' + ${page.nextPage}}" aria-label="Next">
+		      <a th:href="${!page.hasNextPage} ? 'javascript:void(0)' : @{'/manager/permissionList?pageNum=' + ${page.nextPage}}" aria-label="Next">
 		        <span aria-hidden="true">&raquo;</span>
 		      </a>
 		    </li>
