--- a/src/main/resources/templates/manager/permissionList.html
+++ b/src/main/resources/templates/manager/permissionList.html
@@ -117,7 +117,9 @@
 			</tbody>
 		</table>
 		<br />
-		<a class="btn btn-default" href="/manager/permissionAdd">添加权限</a><br /> 
+		<a class="btn btn-default" th:if="${roleId} == null" href="/manager/permissionAdd/">添加权限</a>
+		<a class="btn btn-default" th:if="${roleId} != null" th:href="@{'/manager/permissionAdd/' + ${roleId}}">添加权限</a>
+		<br /> 
 		<!-- 用户列表 结束 ⬆️-->
 		<nav aria-label="Page navigation">
 		  <ul class="pagination">
