--- a/src/main/resources/templates/manager/roleList.html
+++ b/src/main/resources/templates/manager/roleList.html
@@ -40,9 +40,9 @@
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">系统设置 <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li><a href="/account/list">账号列表</a></li>
-		            <li><a href="/account/role">角色管理</a></li>
-		            <li><a href="/account/permission">权限管理</a></li>
+		            <li><a href="/manager/accountList">账号列表</a></li>
+		            <li><a href="/manager/roleList">角色管理</a></li>
+		            <li><a href="/manager/permissionList">权限管理</a></li>
 		          </ul>
 		        </li>
 		      </ul>
