--- a/src/main/resources/templates/manager/rolePermissions.html
+++ b/src/main/resources/templates/manager/rolePermissions.html
@@ -98,7 +98,7 @@
 				$.post(url, data, function(data) {
 					console.log(data);
 				});
-				//window.location.href="/manager/permissionList";
+				window.location.href="/manager/roleList";
 			}
 		</script>
 	</body>
